                 them out. This was asked for by issue #647 as filed
                 against ArgoUML.

* [Type Checker] Improved error reports in Collection.navigateParameterized()

* [Build System] Added this file together with a release policy.
                 Therefore, this section is by no means complete.

* [Type Checker] Introduced Type2


Fixed bugs
----------
* [Injector]     Enhanced OCLInstrumentor.fillInSignature to modify array types to sequence types

* [Java Code Generator]
                 Fixed generation of "->excluding", so that a cast is generated, too.

* [Type Checker] Enhanced DefaultTypeFactory to recognize collection types.

* [Type Checker] fixed ClassAny.navigateParameterized and OclAnyImpl.findMethod
  [OCL Library]  to also include methods defined by java.lang.Object if the original
                 classifier is an interface.

* [Type Checker] fixed ClassAny.navigateParameterized and OclAnyImpl.findMethod
  [OCL Library]  to also include methods defined by interfaces extended by other
                 interfaces.

* [Injector]     fixed small problem when only an @postcondition tag was defined
                 for a method.

* [Injector]     fixed NullPointerException in tudresden.ocl.injection.lib.Check

* [Injector]     #223583 OCL constraints at class level
                 Added onFileDocComment to TaskInstrumentor to allow for handling
                 of file level javadoc comments.

* [Injector]     The generated code did not reset Invariant.checking_flag if
                 the code checking contraints raised an exception, and in the
                 same situation Invariant.checkVacantVariants did not reset
                 vacantInvariants.

* [Injector]     #223601 static initializers
  [OCL Library]  replaced Class.forName(name) by
  [Type Checker] Class.forName(name, false, getClass().getClassLoader())
                 This prevents static initializers from being executed